# televibecode

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  data-models.md  event-streaming.md  job-tracker-message-spec.md  multi-session.md  operations.md  orchestrator-mcp.md  requirements.md  roadmap.md  runner-integration.md  sdk-analysis.md  session-extraction.md  spec-review.md  technology-reference.md  telegram-bot.md  telegram-ui-research.md  workflow.md
src/televibecode/: __init__.py  __main__.py  config.py  main.py  supervisor.py
src/televibecode/ai/: __init__.py  agent.py  command_suggester.py  intent.py  mode_selector.py  models.py  tool_tester.py  transcription.py
src/televibecode/backlog/: __init__.py  parser.py
src/televibecode/db/: __init__.py  database.py  models.py
src/televibecode/orchestrator/: __init__.py  server.py
src/televibecode/orchestrator/tools/: __init__.py  approvals.py  git_ops.py  jobs.py  projects.py  sessions.py  tasks.py
src/televibecode/runner/: __init__.py  context.py  executor.py  sdk_executor.py
src/televibecode/telegram/: __init__.py  bot.py  formatters.py  handlers.py  state.py
src/televibecode/tracker/: __init__.py  config.py  events.py  manager.py  renderer.py
tests/: test_backlog.py  test_config.py  test_database.py  test_intent.py
