[project]
name = "televibecode"
version = "0.1.0"
description = "Remote orchestration harness for managing Claude Code sessions via Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
televibecode = "televibecode.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/televibecode"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
